Some code refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 # Game Boilerplate Generator
-project(gbgen VERSION 0.2)
+project(gbgen VERSION 0.3)
 
 configure_file(${PROJECT_SOURCE_DIR}/config/config.h.in ${PROJECT_SOURCE_DIR}/include/config.h)
 
@@ -12,6 +12,9 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS On)
 add_executable(
 	${PROJECT_NAME} 
 	${PROJECT_SOURCE_DIR}/src/main.cpp
+	${PROJECT_SOURCE_DIR}/src/workspace.cpp
+	${PROJECT_SOURCE_DIR}/src/cmakelists.cpp
+	${PROJECT_SOURCE_DIR}/src/keymanager.cpp
 )
 
 target_include_directories(
