--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(
 	${PROJECT_SOURCE_DIR}/src/timeclass.cpp
 	${PROJECT_SOURCE_DIR}/src/cronometerclass.cpp
 	${PROJECT_SOURCE_DIR}/src/randomclass.cpp
+	${PROJECT_SOURCE_DIR}/src/utils.cpp
 )
 
 target_include_directories(
