--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(
     ${PROJECT_SOURCE_DIR}/src/utils/File.cpp
 
 	${PROJECT_SOURCE_DIR}/src/CMakeFile.cpp
+	${PROJECT_SOURCE_DIR}/src/KeyManager.cpp
 
 	${PROJECT_SOURCE_DIR}/src/workspace.cpp
 	${PROJECT_SOURCE_DIR}/src/cmakelists.cpp
