--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,8 @@ add_executable(
 
 	${PROJECT_SOURCE_DIR}/src/CMakeFile.cpp
 	${PROJECT_SOURCE_DIR}/src/KeyManager.cpp
+	${PROJECT_SOURCE_DIR}/src/MouseManager.cpp
+	${PROJECT_SOURCE_DIR}/src/Config.cpp
 
 	${PROJECT_SOURCE_DIR}/src/workspace.cpp
 	${PROJECT_SOURCE_DIR}/src/cmakelists.cpp
