--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_executable(
 	${PROJECT_SOURCE_DIR}/src/Time.cpp
 	${PROJECT_SOURCE_DIR}/src/Cronometer.cpp
 	${PROJECT_SOURCE_DIR}/src/Random.cpp
+	${PROJECT_SOURCE_DIR}/src/SceneManager.cpp
 
 	${PROJECT_SOURCE_DIR}/src/workspace.cpp
 	${PROJECT_SOURCE_DIR}/src/cmakelists.cpp
