--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,41 +1,55 @@
-add_executable(gbgen
-	ArgsParser.cpp
-	writeHelp.cpp
-	ProjectListFiles.cpp
-	ProjectBuilder.cpp
-	main.cpp
+add_executable(gbgen)
 
-	utils/StringTrim.cpp
-	utils/Instruction.cpp
-	utils/Conditional.cpp
-	utils/IfStatement.cpp
-	utils/ForStatement.cpp
-	utils/WhileStatement.cpp
-	utils/SwitchStatement.cpp
-	utils/Case.cpp
-	utils/Function.cpp
-	utils/WritableContent.cpp
-	utils/Class.cpp
-	utils/Namespace.cpp
-	utils/File.cpp
+# Core sources
+target_sources(
+	gbgen
+		PRIVATE 
+			ArgsParser.cpp 
+			writeHelp.cpp 
+			ProjectListFiles.cpp 
+			ProjectBuilder.cpp 
+			main.cpp
+)
 
-	KeyManager.cpp
-	MouseManager.cpp
-	Config.cpp
-	Time.cpp
-	Cronometer.cpp
-	Random.cpp
-	SceneManager.cpp
-	Game.cpp
-	ProjectClass.cpp
-	MainFile.cpp
-	TextureManager.cpp
+# Utility sources
+target_sources(
+	gbgen
+		PRIVATE 
+			utils/StringTrim.cpp
+			utils/Instruction.cpp
+			utils/Conditional.cpp
+			utils/IfStatement.cpp
+			utils/ForStatement.cpp
+			utils/WhileStatement.cpp
+			utils/SwitchStatement.cpp
+			utils/Case.cpp
+			utils/Function.cpp
+			utils/WritableContent.cpp
+			utils/Class.cpp
+			utils/Namespace.cpp
+			utils/File.cpp
+)
 
-	workspace.cpp
+# Specific generator sources
+target_sources(
+	gbgen 
+		PRIVATE
+			KeyManager.cpp
+			MouseManager.cpp
+			Config.cpp
+			Time.cpp
+			Cronometer.cpp
+			Random.cpp
+			SceneManager.cpp
+			Game.cpp
+			ProjectClass.cpp
+			MainFile.cpp
+			TextureManager.cpp
+			workspace.cpp
 )
 
 target_include_directories(gbgen PRIVATE "${PROJECT_SOURCE_DIR}/include" "${PROJECT_SOURCE_DIR}/include/generators")
 
 target_link_libraries(gbgen STM::SimpleTaskManager)
 
-install(TARGETS ${PROJECT_NAME} RUNTIME)
+install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
