--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,8 +6,8 @@ target_sources(
 		PRIVATE 
 			ArgsParser.cpp 
 			writeHelp.cpp 
-			ProjectListFiles.cpp 
 			ProjectBuilder.cpp 
+			workspace.cpp
 			main.cpp
 )
 
@@ -16,39 +16,10 @@ target_sources(
 	gbgen
 		PRIVATE 
 			utils/StringTrim.cpp
-			utils/Instruction.cpp
-			utils/Conditional.cpp
-			utils/IfStatement.cpp
-			utils/ForStatement.cpp
-			utils/WhileStatement.cpp
-			utils/SwitchStatement.cpp
-			utils/Case.cpp
-			utils/Function.cpp
-			utils/WritableContent.cpp
-			utils/Class.cpp
-			utils/Namespace.cpp
-			utils/File.cpp
+			utils/replaceAll.cpp
 )
 
-# Specific generator sources
-target_sources(
-	gbgen 
-		PRIVATE
-			KeyManager.cpp
-			MouseManager.cpp
-			Config.cpp
-			Time.cpp
-			Cronometer.cpp
-			Random.cpp
-			SceneManager.cpp
-			Game.cpp
-			ProjectClass.cpp
-			MainFile.cpp
-			TextureManager.cpp
-			workspace.cpp
-)
-
-target_include_directories(gbgen PRIVATE "${PROJECT_SOURCE_DIR}/include" "${PROJECT_SOURCE_DIR}/include/generators")
+target_include_directories(gbgen PRIVATE "${PROJECT_SOURCE_DIR}/include")
 
 target_link_libraries(gbgen STM::SimpleTaskManager)
 
