Removed vulkan support. Added back SDL Image. Added support for basic 3D math

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,11 +19,11 @@ target_sources(
 			utils/replaceAll.cpp
 )
 
-# Vulkan sources
+# Math sources
 target_sources(
 	gbgen
 		PRIVATE
-			vulkan/VulkanProjectBuilder.cpp
+			math/MathExtensionBuilder.cpp
 )
 
 target_include_directories(gbgen PRIVATE "${PROJECT_SOURCE_DIR}/include")
